[package]
name = "slog"
version = "2.7.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Structured, extensible, composable logging for Rust"
keywords = ["log", "logging", "structured", "hierarchical"]
categories = ["development-tools::debugging"]
license = "MPL-2.0 OR MIT OR Apache-2.0"
documentation = "https://docs.rs/slog"
homepage = "https://github.com/slog-rs/slog"
repository = "https://github.com/slog-rs/slog"
readme = "README.md"
edition = "2018"

# This is our Minimum Supported Rust Version (MSRV)
#
# See the wiki for our full policy on changing this.
#
# There are two main requirements:
# 1. Bumping the MSRV requires increasing the minor version number (2.7 -> 2.8)
# 2. Changes must be clearly announced in the CHANGELOG.md file
# 3. At a minimum, we must support at least the latest stable rust, minus 15 releases.
#    - We can (and very often do) support versions much older than this.
#    - See wiki for for details
#
# The first version of Cargo that supports this field was in Rust 1.56.0.
# In older releases, the field will be ignored, and Cargo will display a warning.
rust-version = "1.31"

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false

[profile.bench]
opt-level = 3
debug = false
lto = true
debug-assertions = false

[features]
nested-values = ["erased-serde", "serde", "serde_derive"]
dynamic-keys = []
std = []
nothreads = []
default = ["std"]

max_level_off   = []
max_level_error = []
max_level_warn  = []
max_level_info  = []
max_level_debug = []
max_level_trace = []

release_max_level_off   = []
release_max_level_error = []
release_max_level_warn  = []
release_max_level_info  = []
release_max_level_debug = []
release_max_level_trace = []

[dependencies]
erased-serde = { version = "0.3", optional = true }
serde = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }
# NOTE: This is just a macro (not a runtime dependency)
rustversion = "1"

[[example]]
name = "singlethread"
required-features = ["nothreads"]

[package.metadata.docs.rs]
features = ["std", "nested-values", "dynamic-keys"]

[workspace]
members = [
  "crates/test_edition2018",
]
