[package]
name = "slog-atomic"
version = "0.4.1"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Atomic run-time controllable drain for slog-rs"
keywords = ["slog", "logging", "log",  "atomic"]
license = "MPL-2.0"
documentation = "https://dpc.github.io/slog-rs/"
homepage = "https://github.com/dpc/slog-rs"
repository = "https://github.com/dpc/slog-rs"
readme = "../../README.md"

[lib]
path = "lib.rs"

[dependencies]
slog = { version = "1", path = "../.." }
crossbeam = "0.2.9"
