[package]
name = "slog-bunyan"
version = "1.1.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Bunyan formatter for slog-rs"
keywords = ["log", "logging", "structured", "hierarchical"]
license = "MPL-2.0"
documentation = "https://dpc.github.io/slog-rs/"
homepage = "https://github.com/dpc/slog-rs"
repository = "https://github.com/dpc/slog-rs"
readme = "../../README.md"

[lib]
path = "lib.rs"

[dependencies]
slog = { version = "1.1", path = "../.." }
slog-json = { version = "1", path = "../json" }
nix = "0.6.0"
chrono = "0.2.22"

[dev-dependencies]
slog-stream = "1.2"
