[package]
name = "slog-json"
version = "1.0.0-alpha3"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Json formatter for slog-rs"
keywords = ["slog", "logging", "json"]
license = "MPL-2.0"
documentation = "https://dpc.github.io/slog-rs/"
homepage = "https://github.com/dpc/slog-rs"
repository = "https://github.com/dpc/slog-rs"
readme = "../../README.md"

[lib]
path = "lib.rs"

[dependencies]
slog = { version = "1.0.0-alpha3", path = "../.." }
slog-serde = { version = "1.0.0-alpha3", path = "../serde"}
slog-stream = { version = "1.0.0-alpha3", path = "../stream" }
serde_json = "0.7.1"
chrono = "0.2"
