[package]
name = "slog-nursery"
version = "0.1.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Staging area for slog-rs"
keywords = ["log", "logging", "structured", "hierarchical"]
license = "MPL-2.0"
documentation = "https://docs.rs/slog-nursery"
homepage = "https://github.com/dpc/slog-rs"
repository = "https://github.com/dpc/slog-rs"
readme = "../../README.md"

[lib]
path = "lib.rs"

[dependencies]
slog = { version = "1", path = "../.." }
