[package]
name = "slog-nursery"
version = "0.2.0-alpha1"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Staging area for slog-rs"
keywords = ["log", "logging", "structured", "hierarchical"]
license = "MPL-2.0"
documentation = "https://dpc.github.io/slog-rs/"
homepage = "https://github.com/dpc/slog-rs"
repository = "https://github.com/dpc/slog-rs"
readme = "../../README.md"

[lib]
path = "lib.rs"

[dependencies]
slog = { version = "2.0.0-alpha.3", path = "../.." }
