[package]
name = "slog-scope"
version = "0.2.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Logging scopes for slog-rs"
keywords = ["slog", "logging", "slog", "log"]
license = "MPL-2.0"
documentation = "https://dpc.github.io/slog-rs/"
homepage = "https://github.com/dpc/slog-rs"
repository = "https://github.com/dpc/slog-rs"
readme = "../../README.md"

[lib]
path = "lib.rs"

[dependencies]
slog = { version = "1", path = "../.." }
lazy_static = "0.2.1"
crossbeam = "0.2.9"


[dev-dependencies]
slog-term = { path = "../term", version = "1" }
