[package]
name = "slog-serde"
version = "0.6.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Serde serialization adapter for slog-rs"
keywords = ["slog", "logging", "serde"]
license = "MPL-2.0"
documentation = "https://dpc.github.io/slog-rs/"
homepage = "https://github.com/dpc/slog-rs"
repository = "https://github.com/dpc/slog-rs"
readme = "../../README.md"


[dependencies]
slog = { version = "0.6.0", path = "../.." }
serde = "0.7.10"
