[package]
name = "slog-serde"
version = "1.0.0-alpha8"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Serde serialization adapter for slog-rs"
keywords = ["slog", "logging", "serde"]
license = "MPL-2.0"
documentation = "https://dpc.github.io/slog-rs/"
homepage = "https://github.com/dpc/slog-rs"
repository = "https://github.com/dpc/slog-rs"
readme = "../../README.md"

[lib]
path = "lib.rs"

[dependencies]
slog = { version = "1", path = "../.." }
serde = "0.8"
