[package]
name = "slog-stdlog"
version = "1.0.0-alpha"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Standard Rust log crate adapter to slog-rs"
keywords = ["slog", "logging", "json", "log"]
license = "MPL-2.0"
documentation = "https://dpc.github.io/slog-rs/"
homepage = "https://github.com/dpc/slog-rs"
repository = "https://github.com/dpc/slog-rs"
readme = "../../README.md"


[dependencies]
slog = { version = "1.0.0-alpha", path = "../.." }
slog-term = { version = "1.0.0-alpha", path = "../term" }
log = "0.3.6"
