[package]
name = "slog-stream"
version = "1.0.0-alpha3"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "`io::Write` streamer for slog-rs"
keywords = ["log", "logging", "structured", "hierarchical", "stream"]
license = "MPL-2.0"
documentation = "https://dpc.github.io/slog-rs/"
homepage = "https://github.com/dpc/slog-rs"
repository = "https://github.com/dpc/slog-rs"
readme = "../../README.md"

[lib]
path = "lib.rs"

[dependencies]
slog = { version = "1.0.0-alpha3", path = "../.." }
