[package]
name = "slog-syslog"
version = "0.7.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Syslog drain for slog-rs"
keywords = ["slog", "logging", "json", "log", "syslog"]
license = "MPL-2.0"
documentation = "https://dpc.github.io/slog-rs/"
homepage = "https://github.com/dpc/slog-rs"
repository = "https://github.com/dpc/slog-rs"
readme = "../../README.md"


[dependencies]
slog = { version = "0.7.0", path = "../.." }
syslog = "3.1.0"
nix = "0.6.0"
rustc-serialize = "0.3.19"
