[package]
name = "slog-syslog"
version = "1.0.0-alpha7"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Syslog drain for slog-rs"
keywords = ["slog", "logging", "json", "log", "syslog"]
license = "MPL-2.0"
documentation = "https://dpc.github.io/slog-rs/"
homepage = "https://github.com/dpc/slog-rs"
repository = "https://github.com/dpc/slog-rs"
readme = "../../README.md"

[lib]
path = "lib.rs"

[dependencies]
slog = { version = "1", path = "../.." }
slog-stream = { version = "1.0.0-alpha7", path = "../stream" }
syslog = "3.1.0"
nix = "0.6.0"
