[package]
name = "slog-term"
version = "1.1.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Unix terminal drain and formatter for slog-rs"
keywords = ["slog", "logging", "log", "term"]
license = "MPL-2.0"
documentation = "https://dpc.github.io/slog-rs/"
homepage = "https://github.com/dpc/slog-rs"
repository = "https://github.com/dpc/slog-rs"
readme = "../../README.md"

[lib]
path = "lib.rs"

[dependencies]
slog = { version = "1", path = "../.." }
slog-stream = { version = "1", path = "../stream" }
isatty = "0.1"
chrono = "0.2"
