[package]
name = "slog-bunyan"
version = "0.1.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Structured, composable logging for Rust"
keywords = ["log", "logging", "structured", "hierarchical"]
license = "MPL-2.0"
documentation = "https://dpc.github.io/slog-rs/"
homepage = "https://github.com/dpc/slog-rs"
repository = "https://github.com/dpc/slog-rs"
readme = "README.md"


[dependencies]
slog = { version = "0.4.0", path = "../.." }
nix= "0.6.0"
chrono = "0.2.22"
