[package]
name = "slog-json"
version = "0.5.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Json formatter for slog-rs"
keywords = ["slog", "logging", "json"]
license = "MPL-2.0"
documentation = "https://dpc.github.io/slog-rs/"
homepage = "https://github.com/dpc/slog-rs"
repository = "https://github.com/dpc/slog-rs"
readme = "README.md"


[dependencies]
slog = { version = "0.5.0", path = "../.." }
slog-serde = { version = "0.5.0", path = "../serde"}
serde_json = "0.7.1"

