[package]
name = "slog-stdlog"
version = "0.5.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Standard Rust log crate adapter to slog-rs"
keywords = ["slog", "logging", "json", "log"]
license = "MPL-2.0"
documentation = "https://dpc.github.io/slog-rs/"
homepage = "https://github.com/dpc/slog-rs"
repository = "https://github.com/dpc/slog-rs"
readme = "../../README.md"


[dependencies]
slog = { version = "0.5.0", path = "../.." }
log = "0.3.6"
