[package]
name = "slog-term"
version = "0.1.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Unix terminal drain for slog-rs"
keywords = ["slog", "logging", "json"]
license = "MPL-2.0"
documentation = "https://dpc.github.io/slog-rs/"
homepage = "https://github.com/dpc/slog-rs"
repository = "https://github.com/dpc/slog-rs"
readme = "README.md"


[dependencies]
slog = { version = "0.4.0", path = "../.." }
isatty = "0.1.1"
ansi_term = "0.7.2"
