[package]
name = "slog-term"
version = "0.5.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Unix terminal drain and formatter for slog-rs"
keywords = ["slog", "logging", "json"]
license = "MPL-2.0"
documentation = "https://dpc.github.io/slog-rs/"
homepage = "https://github.com/dpc/slog-rs"
repository = "https://github.com/dpc/slog-rs"
readme = "README.md"


[dependencies]
slog = { version = "0.5.0", path = "../.." }
isatty = "0.1.1"
ansi_term = "0.7.2"
rustc-serialize = "0.3.19"
